--- a/detail.css
+++ b/detail.css
@@ -20,6 +20,31 @@
 }
 
 figure {
-  display: block;
-  margin: auto;
+  margin-left: 40px;
+}
+
+figcaption {
+  margin-top: -30px;
+}
+
+.bat_img {
+  transform: rotate(90deg);
+}
+
+.dropdown .dropdown-menu {
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+
+    max-height: 0;
+    display: block;
+    overflow: hidden;
+    opacity: 0;
+}
+
+.dropdown.open .dropdown-menu {
+    max-height: 300px;
+    opacity: 1;
 }
