--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -119,7 +119,7 @@
       </a>
     </div>
     <div class="col-md-6">
-      <a href="#">
+      <a href="carmichael.html">
         <div class="snapshot clearfix">
           <div class="pull-left">
             <p class="location">Carmichael</p>
