--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -95,66 +95,66 @@
       var day = date.getDay();
       var hour = date.getHours();
       if (day >= 1 && day <= 5) {
-        close.innerHTML = "8 PM";
+        carm_close.innerHTML = "8 PM";
         if(day == 1 || day == 3) {
           if(MW_percentage[hour] == undefined) {
-            percentage.innerHTML = "0%";
-            isItClosed.innerHTML = "This place is closed right now";
+            carm_percentage.innerHTML = "0%";
+            carm_isItClosed.innerHTML = "This place is closed right now";
 
           }
           else {
-            percentage_num = MW_percentage[hour]
-            percentage.innerHTML = MW_percentage[hour] + "%";
+            carm_percentage_num = MW_percentage[hour]
+            carm_percentage.innerHTML = MW_percentage[hour] + "%";
           }
         }
         else {
           if(TThF_percentage[hour] == undefined) {
-            percentage.innerHTML = "0%";
-            isItClosed.innerHTML = "This place is closed right now";
+            carm_percentage.innerHTML = "0%";
+            carm_isItClosed.innerHTML = "This place is closed right now";
           }
           else {
-            percentage_num = TThF_percentage[hour]
-            percentage.innerHTML = TThF_percentage[hour] + "%";
+            carm_percentage_num = TThF_percentage[hour]
+            carm_percentage.innerHTML = TThF_percentage[hour] + "%";
           }
         }
       }
       else if (day == 0) {
-        close.innerHTML = "9 PM";
+        carm_close.innerHTML = "9 PM";
         if(Su_percentage[hour] == undefined) {
-          percentage.innerHTML = "0%";
-          isItClosed.innerHTML = "This place is closed right now";
+          carm_percentage.innerHTML = "0%";
+          carm_isItClosed.innerHTML = "This place is closed right now";
         }
         else {
-          percentage_num = Su_percentage[hour]
-          percentage.innerHTML = Su_percentage[hour] + "%";
+          carm_percentage_num = Su_percentage[hour]
+          carm_percentage.innerHTML = Su_percentage[hour] + "%";
         }
       }
       else {
-        close.innerHTML = "8 PM"
+        carm_close.innerHTML = "8 PM"
         if(Sa_percentage[hour] == undefined) {
-          percentage.innerHTML = "0%";
-          isItClosed.innerHTML = "This place is closed right now";
+          carm_percentage.innerHTML = "0%";
+          carm_isItClosed.innerHTML = "This place is closed right now";
         }
         else{
-          percentage_num = Sa_percentage[hour]
-          percentage = Sa_percentage[hour] + "%";
+          carm_percentage_num = Sa_percentage[hour]
+          carm_percentage = Sa_percentage[hour] + "%";
         }
       }
-      if(percentage_num >= 0 && percentage_num <= 20) {
-          bat_image.setAttribute("src","images/b1.png");
-          figcaption.innerHTML = "Not Busy";
+      if(carm_percentage_num >= 0 && carm_percentage_num <= 20) {
+          carm_bat_image.setAttribute("src","images/b1.png");
+          carm_figcaption.innerHTML = "Not Busy";
       }
-      else if(percentage_num > 20 && percentage_num <= 40) {
-          bat_image.setAttribute("src","images/b2.png");
-          figcaption.innerHTML = "Somewhat Busy";
+      else if(carm_percentage_num > 20 && carm_percentage_num <= 40) {
+          carm_bat_image.setAttribute("src","images/b2.png");
+          carm_figcaption.innerHTML = "Somewhat Busy";
       }
-      else if(percentage_num > 40 && percentage_num <= 60) {
-          bat_image.setAttribute("src","images/b3.png");
-          figcaption.innerHTML = "Quite Busy";
+      else if(carm_percentage_num > 40 && carm_percentage_num <= 60) {
+          carm_bat_image.setAttribute("src","images/b3.png");
+          carm_figcaption.innerHTML = "Quite Busy";
       }
-      else if(percentage_num > 60) {
-          bat_image.setAttribute("src","images/b4.png");
-          figcaption.innerHTML = "Very Busy";
+      else if(carm_percentage_num > 60) {
+          carm_bat_image.setAttribute("src","images/b4.png");
+          carm_figcaption.innerHTML = "Very Busy";
       }
     });
 
