--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -90,8 +90,8 @@
       <div id="navbar" class="navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li class="active"><a href="#">About</a></li>
+          <li class="active"><a href="#">Contact</a></li>
         </ul>
       </div>
     </div>
