fix broken links

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -221,7 +221,7 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <a href="#">
+      <a href="tisch.html">
         <div class="snapshot clearfix">
           <div class="pull-left">
             <p class="location">Tisch</p>
@@ -239,7 +239,7 @@
       </a>
     </div>
     <div class="col-md-6">
-      <a href="#">
+      <a href="eaton.html">
         <div class="snapshot clearfix">
           <div class="pull-left">
             <p class="location">Eaton Lab</p>
