--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -5,6 +5,20 @@
   font-weight: bolder;
 }
 
+#text {
+  text-align: center;
+  font-family: 'Julius Sans One';
+  font-size: 12 px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+  color: steelblue;
+}
+
 .snapshot {
   margin-left: 30px;
   margin-right: 30px;
