changed battery img

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -180,20 +180,24 @@
         }
       }
       if(carm_percentage_num >= 0 && carm_percentage_num <= 20) {
-          carm_bat_image.setAttribute("src","images/b1.png");
+          carm_bat_image.setAttribute("src","images/b0.png");
           carm_figcaption.innerHTML = "Not Busy";
       }
       else if(carm_percentage_num > 20 && carm_percentage_num <= 40) {
-          carm_bat_image.setAttribute("src","images/b2.png");
+          carm_bat_image.setAttribute("src","images/b1.png");
           carm_figcaption.innerHTML = "Somewhat Busy";
       }
       else if(carm_percentage_num > 40 && carm_percentage_num <= 60) {
-          carm_bat_image.setAttribute("src","images/b3.png");
+          carm_bat_image.setAttribute("src","images/b2.png");
           carm_figcaption.innerHTML = "Quite Busy";
       }
-      else if(carm_percentage_num > 60) {
-          carm_bat_image.setAttribute("src","images/b4.png");
+      else if(carm_percentage_num > 60 && carm_percentage_num <= 80) {
+          carm_bat_image.setAttribute("src","images/b3.png");
           carm_figcaption.innerHTML = "Very Busy";
+      }
+      else if(carm_percentage_num > 80) {
+          carm_bat_image.setAttribute("src","images/b4.png");
+          carm_figcaption.innerHTML = "Extremely Busy";
       }
 
       /************** EATON ************/
@@ -251,20 +255,24 @@
         }
       }
       if(eaton_percentage_num >= 0 && eaton_percentage_num <= 20) {
-          eaton_bat_image.setAttribute("src","images/b1.png");
+          eaton_bat_image.setAttribute("src","images/b0.png");
           eaton_figcaption.innerHTML = "Not Busy";
       }
       else if(eaton_percentage_num > 20 && eaton_percentage_num <= 40) {
-          eaton_bat_image.setAttribute("src","images/b2.png");
+          eaton_bat_image.setAttribute("src","images/b1.png");
           eaton_figcaption.innerHTML = "Somewhat Busy";
       }
       else if(eaton_percentage_num > 40 && eaton_percentage_num <= 60) {
-          eaton_bat_image.setAttribute("src","images/b3.png");
+          eaton_bat_image.setAttribute("src","images/b2.png");
           eaton_figcaption.innerHTML = "Quite Busy";
       }
-      else if(eaton_percentage_num > 60) {
-          eaton_bat_image.setAttribute("src","images/b4.png");
+      else if(eaton_percentage_num > 60 && eaton_percentage_num <= 80) {
+          eaton_bat_image.setAttribute("src","images/b3.png");
           eaton_figcaption.innerHTML = "Very Busy";
+      }
+      else if(eaton_percentage_num > 80) {
+          eaton_bat_image.setAttribute("src","images/b4.png");
+          eaton_figcaption.innerHTML = "Extremely Busy";
       }
 
       /******************* TISCH ****************/
@@ -321,20 +329,24 @@
         }
       }
       if(tisch_percentage_num >= 0 && tisch_percentage_num <= 20) {
-          tisch_bat_image.setAttribute("src","images/b1.png");
+          tisch_bat_image.setAttribute("src","images/b0.png");
           tisch_figcaption.innerHTML = "Not Busy";
       }
       else if(tisch_percentage_num > 20 && tisch_percentage_num <= 40) {
-          tisch_bat_image.setAttribute("src","images/b2.png");
+          tisch_bat_image.setAttribute("src","images/b1.png");
           tisch_figcaption.innerHTML = "Somewhat Busy";
       }
       else if(tisch_percentage_num > 40 && tisch_percentage_num <= 60) {
-          tisch_bat_image.setAttribute("src","images/b3.png");
+          tisch_bat_image.setAttribute("src","images/b2.png");
           tisch_figcaption.innerHTML = "Quite Busy";
       }
-      else if(tisch_percentage_num > 60) {
-          tisch_bat_image.setAttribute("src","images/b4.png");
+      else if(tisch_percentage_num > 60 && tisch_percentage_num <= 80) {
+          tisch_bat_image.setAttribute("src","images/b3.png");
           tisch_figcaption.innerHTML = "Very Busy";
+      }
+      else if(tisch_percentage_num > 80) {
+          tisch_bat_image.setAttribute("src","images/b4.png");
+          _figcaption.innerHTML = "Extremely Busy";
       }
 
       /********************* DEWICK ********************/
@@ -396,20 +408,24 @@
         }
       }
       if(dewick_percentage_num >= 0 && dewick_percentage_num <= 20) {
-          dewick_bat_image.setAttribute("src","images/b1.png");
+          dewick_bat_image.setAttribute("src","images/b0.png");
           dewick_figcaption.innerHTML = "Not Busy";
       }
       else if(dewick_percentage_num > 20 && dewick_percentage_num <= 40) {
-          dewick_bat_image.setAttribute("src","images/b2.png");
+          dewick_bat_image.setAttribute("src","images/b1.png");
           dewick_figcaption.innerHTML = "Somewhat Busy";
       }
       else if(dewick_percentage_num > 40 && dewick_percentage_num <= 60) {
-          dewick_bat_image.setAttribute("src","images/b3.png");
+          dewick_bat_image.setAttribute("src","images/b2.png");
           dewick_figcaption.innerHTML = "Quite Busy";
       }
-      else if(dewick_percentage_num > 60) {
-          dewick_bat_image.setAttribute("src","images/b4.png");
+      else if(dewick_percentage_num > 60 && dewick_percentage_num <= 80) {
+          dewick_bat_image.setAttribute("src","images/b3.png");
           dewick_figcaption.innerHTML = "Very Busy";
+      }
+      else if(dewick_percentage_num > 80) {
+          dewick_bat_image.setAttribute("src","images/b4.png");
+          dewick_figcaption.innerHTML = "Extremely Busy";
       }
     });
 
