--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -185,7 +185,7 @@
       }
       else if(carm_percentage_num > 20 && carm_percentage_num <= 40) {
           carm_bat_image.setAttribute("src","images/b1.png");
-          carm_figcaption.innerHTML = "Somewhat Busy";
+          carm_figcaption.innerHTML = "Kinda Busy";
       }
       else if(carm_percentage_num > 40 && carm_percentage_num <= 60) {
           carm_bat_image.setAttribute("src","images/b2.png");
@@ -260,7 +260,7 @@
       }
       else if(eaton_percentage_num > 20 && eaton_percentage_num <= 40) {
           eaton_bat_image.setAttribute("src","images/b1.png");
-          eaton_figcaption.innerHTML = "Somewhat Busy";
+          eaton_figcaption.innerHTML = "Kinda Busy";
       }
       else if(eaton_percentage_num > 40 && eaton_percentage_num <= 60) {
           eaton_bat_image.setAttribute("src","images/b2.png");
@@ -334,7 +334,7 @@
       }
       else if(tisch_percentage_num > 20 && tisch_percentage_num <= 40) {
           tisch_bat_image.setAttribute("src","images/b1.png");
-          tisch_figcaption.innerHTML = "Somewhat Busy";
+          tisch_figcaption.innerHTML = "Kinda Busy";
       }
       else if(tisch_percentage_num > 40 && tisch_percentage_num <= 60) {
           tisch_bat_image.setAttribute("src","images/b2.png");
@@ -413,7 +413,7 @@
       }
       else if(dewick_percentage_num > 20 && dewick_percentage_num <= 40) {
           dewick_bat_image.setAttribute("src","images/b1.png");
-          dewick_figcaption.innerHTML = "Somewhat Busy";
+          dewick_figcaption.innerHTML = "Kinda Busy";
       }
       else if(dewick_percentage_num > 40 && dewick_percentage_num <= 60) {
           dewick_bat_image.setAttribute("src","images/b2.png");
