fix mobile responsiveness on detail pages

--- a/public/stylesheets/responsive.css
+++ b/public/stylesheets/responsive.css
@@ -18,12 +18,16 @@
   }
   #bat_image {
     position: absolute;
-    top: -200px;
+    top: 220px;
     left: 40vw;
   }
   #figcaption {
     position: absolute;
-    top: -50px;
+    top: 360px;
     left: 40vw;
+  }
+  #dining_info {
+    position: absolute;
+    top: 1100px;
   }
 }
