Meta tag on index

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,6 +11,9 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+   <!-- Phone Responsive Meta Tag -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <script>
 
     /********************* TIME ARRAYS ***************/
